--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -115,12 +115,12 @@ input, select, textarea {
 
  /* unvisited link */
 a:link {
-	color: #9f89ce;
+	color: #c0a8f4;
 }
 
   /* visited link */
 a:visited {
-	color: #70628c;
+	color: #68628c;
 }
 
   /* mouse over link */
@@ -130,7 +130,7 @@ a:hover {
 
   /* selected link */
 a:active {
-	color: rgb(9, 91, 154);
+	color: rgb(9, 98, 154);
 } 
 
 /* Type */
