--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -29,6 +29,19 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;}
 
+	// <uniquifier>: Use a unique and descriptive class name
+	// <weight>: Use a value from 300 to 800
+	
+	.open-sans-<uniquifier> {
+	font-family: "Open Sans", sans-serif;
+	font-optical-sizing: auto;
+	font-weight: <weight>;
+	font-style: normal;
+	font-variation-settings:
+		"wdth" 100;
+	}
+	
+
 body {
 	line-height: 1;
 }
@@ -137,7 +150,7 @@ a:active {
 
 	body, input, select, textarea {
 		color: #a6d9d0;
-		font-family: "Georgia", Helvetica, Verdana, sans-serif;
+		font-family: "Georgia", Open Sans, Verdana, sans-serif;
 		font-size: 16pt;
 		font-weight: 300;
 		line-height: 1.75;
@@ -1816,7 +1829,7 @@ a:active {
 	}
 
 	header p {
-		font-family: "Helvetica", sans-serif;
+		font-family: "Open Sans", sans-serif;
 		margin-top: -1em;
 	}
 
