--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -301,6 +301,12 @@ a:active {
 		padding: 0.5em 0 0.5em 2em;
 	}
 
+	.videoexample {
+        margin: 0.5em auto;
+		display: block; /*DISPLAY INLINE MAKES IT SUS WITH MARGINS*/ 
+        padding: 0.25em 0.5em;
+    }
+
 	code {
 		background: rgba(144, 144, 144, 0.075);
 		border-radius: 4px;
@@ -2615,7 +2621,7 @@ a:active {
 		-webkit-flex-wrap: wrap;
 		-ms-flex-wrap: wrap;
 		flex-wrap: wrap;
-		postiion: relative;
+		postion: relative;
 		margin: -2.5em 0 0 -2.5em;
 	}
 
