--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -106,13 +106,16 @@ input, select, textarea {
 	html {
 		box-sizing: border-box;
 	}
+	
 
 	*, *:before, *:after {
 		box-sizing: inherit;
 	}
 
 	body {
-		background: linear-gradient(#1f3550, #0f0822);
+		background: linear-gradient(#1f3550, #0f0822); min-height: 100%;
+		margin: auto;
+		background-size: cover
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
@@ -196,17 +199,18 @@ a:active {
 	}
 
 	p {
-		margin: 0 0 2em 0;
+		margin: 1.5em 0 0.5em 0;
 	}
 
 	h1 {
 		font-family: "Georgia";
-		text-align: center;
-		font-size: 2.75em;
+		text-align: left;
+		font-size: 1.75em;
 		font-weight: 700;
 		line-height: 1.3;
-		margin: 0 0 1em 0;
-		letter-spacing: -0.035em;
+		margin: -1.80em 0em 0em 2em;
+		letter-spacing: 0.015em;
+		padding: 15px 0;
 	}
 
 		h1 a {
@@ -233,9 +237,9 @@ a:active {
 	h2, h3, h4, h5, h6 {
 		font-weight: 900;
 		line-height: 1.5;
-		margin: 0 0 2em 0;
+		margin: 1em 0 0.5em 0;
 		text-transform: uppercase;
-		letter-spacing: 0.35em;
+		letter-spacing: 0.035em;
 	}
 
 		h2 a, h3 a, h4 a, h5 a, h6 a {
@@ -301,11 +305,18 @@ a:active {
 		padding: 0.5em 0 0.5em 2em;
 	}
 
-	.videoexample {
+	.symbol {
+        margin: 0em 0 0 0;
+        padding: 0em 0em;
+    }
+
+	.demoreel {
         margin: 0.5em auto;
 		display: block; /*DISPLAY INLINE MAKES IT SUS WITH MARGINS*/ 
         padding: 0.25em 0.5em;
+		text-align: center
     }
+
 
 	code {
 		background: rgba(144, 144, 144, 0.075);
@@ -1836,13 +1847,13 @@ a:active {
 
 	header p {
 		font-family: "Open Sans", sans-serif;
-		margin-top: -1em;
+		margin-top: -5em;
 	}
 
 	@media screen and (max-width: 736px) {
 
 		header p {
-			margin-top: 0;
+			margin-top: -5em;
 		}
 
 	}
@@ -2610,6 +2621,8 @@ a:active {
 			opacity: 0.25;
 		}
 
+
+
 /* Tiles */
 
 	.tiles {
@@ -2875,38 +2888,30 @@ a:active {
 
 		}
 
+		img {
+			position: absolute;
+			left: 0px;
+			top: 0px;
+			z-index: -1;
+		}
+
 /* Header */
 
 	#header {
-		padding: 8em 0 0.1em 0 ;
+		padding: 4em 0 0.5em 0 ;
+		background-color: #151515;
+		position: sticky;
+		z-index: 5;
+		top: 0;
+
+
+
 	}
-
-		#header .logo {
-			display: block;
-			border-bottom: 0;
-			color: inherit;
-			font-weight: 900;
-			letter-spacing: 0.35em;
-			margin: 0 0 2.5em 20em;
-			text-decoration: none;
-			text-transform: uppercase;
-			display: inline-block;
-			
-		}
-
-			#header .logo > * {
-				display: inline-block;
-				vertical-align: middle;
-			}
-
-			#header .logo .symbol {
-				margin-right: 0.65em;
-			}
 
 				#header .logo .symbol img {
 					display: block;
 					width: 2em;
-					height: 2em;
+					height: 3em;
 				}
 
 		#header nav {
@@ -3012,6 +3017,13 @@ a:active {
 
 		}
 
+/* Extras */
+
+#otherreels {
+	padding: 8em 0 0.1em 0 ;
+	display: flex;
+}
+
 /* Menu */
 
 	#wrapper {
@@ -3020,6 +3032,12 @@ a:active {
 		-ms-transition: opacity 0.45s ease;
 		transition: opacity 0.45s ease;
 		opacity: 1;
+		color: #a6d9d0;
+		font-family: "Georgia", Open Sans, Verdana, sans-serif;
+		font-size: 20pt;
+		font-weight: 300;
+		line-height: 1;
+		text-align: center;
 	}
 
 	#menu {
@@ -3210,6 +3228,69 @@ a:active {
 				padding: 0em 0 4em 0 ;
 			}
 
+		}
+
+		.container {
+			display: flex;
+			justify-content: space-around;
+			flex-wrap: wrap;
+		}
+		.video {
+			flex: 1;
+			min-width: 300px;
+			margin: 10px;
+		}
+		iframe {
+			aspect-ratio: 16 / 9; /* maintain a 16:9 aspect ratio */
+		}
+
+	#LABELTEXT {
+	color: #a6d9d0;
+	text-align: center;
+	font-family: "Georgia", Open Sans, Verdana, sans-serif;
+	font-size: 32pt;
+	font-weight: 300;
+	line-height: 1.55;
+	padding: 0em 0 0em 0 ;
+	}
+
+/* ABOUT ME */
+
+	#ABOUTME {
+	color: #a6d9d0;
+	font-family: 'Open Sans', Verdana, sans-serif;
+	font-size: 16pt;
+	font-weight: 300;
+	line-height: 1.75;
+	padding: 0em 0 0em 0 ;
+	}
+
+	@media screen and (max-width: 736px) {
+
+		#aboutme {
+			padding: 0em 0 8em 0 ;
+		}
+
+	}
+
+	a:hover {
+		text-decoration: none;
+		}
+
+
+	.NAVIGATION {
+		margin: -1em 0 0em 0em;
+		}
+	
+	.NAVIGATION a{
+		color: #a6d9d0;
+		text-decoration: none;
+		letter-spacing: 0.055em;
+		margin: 0 0 0em 0em;
+		}
+
+	#secondvideo {
+		margin-right: auto;
 		}
 
 /* Footer */
