--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -199,7 +199,11 @@ a:active {
 	}
 
 	p {
-		margin: 1.5em 0 0.5em 0;
+		margin: 0em 0 1em 0;
+		z-index: 1;
+		color: rgb(200, 212, 234);
+		text-align: center;
+		font-size: 0.75em;
 	}
 
 	h1 {
@@ -208,9 +212,11 @@ a:active {
 		font-size: 1.75em;
 		font-weight: 700;
 		line-height: 1.3;
-		margin: -1.80em 0em 0em 2em;
+		margin: -1.85em 0em 0em 2.5em;
 		letter-spacing: 0.015em;
 		padding: 15px 0;
+		filter: drop-shadow(0 0 0.5px rgb(200, 212, 234));
+		
 	}
 
 		h1 a {
@@ -252,10 +258,16 @@ a:active {
 
 	h3 {
 		font-size: 1em;
+		text-align: center;
+		color: #a6d9d0;
 	}
 
 	h4 {
-		font-size: 0.8em;
+		margin: 0em 0 1em 0;
+		z-index: 1;
+		color: #c9c9c9;
+		text-align: right;
+		font-size: 0.75em;
 	}
 
 	h5 {
@@ -1866,6 +1878,11 @@ a:active {
 		position: relative;
 	}
 
+	.sussy-icon {
+	font-size: 0.55em;
+	
+	}
+
 		.icon:before {
 			-moz-osx-font-smoothing: grayscale;
 			-webkit-font-smoothing: antialiased;
@@ -2103,7 +2120,8 @@ a:active {
 		cursor: default;
 		list-style: none;
 		padding-left: 0;
-		margin: -1em 0 2em -1em;
+		margin: -10em 0 8em -1em;
+		text-align: center
 	}
 
 		ul.icons li {
@@ -2185,6 +2203,30 @@ a:active {
 					}
 
 		}
+
+		.snow {
+			width: 100vw;
+			height: 100vh;
+			position: fixed;
+			background-image: url("data:image/svg+xml,%3Csvg version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' viewBox='0 0 50 50' style='enable-background:new 0 0 50 50%3B' xml:space='preserve'%3E%3Cstyle type='text/css'%3E.st1%7Bopacity:0.3%3Bfill:%23FFFFFF%3B%7D.st3%7Bopacity:0.1%3Bfill:%23FFFFFF%3B%7D%3C/style%3E%3Ccircle class='st1' cx='5' cy='8' r='1'/%3E%3Ccircle class='st1' cx='38' cy='3' r='1'/%3E%3Ccircle class='st1' cx='12' cy='4' r='1'/%3E%3Ccircle class='st1' cx='16' cy='16' r='1'/%3E%3Ccircle class='st1' cx='47' cy='46' r='1'/%3E%3Ccircle class='st1' cx='32' cy='10' r='1'/%3E%3Ccircle class='st1' cx='3' cy='46' r='1'/%3E%3Ccircle class='st1' cx='45' cy='13' r='1'/%3E%3Ccircle class='st1' cx='10' cy='28' r='1'/%3E%3Ccircle class='st1' cx='22' cy='35' r='1'/%3E%3Ccircle class='st1' cx='3' cy='21' r='1'/%3E%3Ccircle class='st1' cx='26' cy='20' r='1'/%3E%3Ccircle class='st1' cx='30' cy='45' r='1'/%3E%3Ccircle class='st1' cx='15' cy='45' r='1'/%3E%3Ccircle class='st1' cx='34' cy='36' r='1'/%3E%3Ccircle class='st1' cx='41' cy='32' r='1'/%3E%3C/svg%3E");
+			background-position: 0px 0px;
+			animation: animatedBackground 30s linear infinite;
+			z-index: -100000;
+			top: 0;
+			left: 0;
+			pointer-events: none;
+			
+		}
+
+		@keyframes animatedBackground {
+			0% {
+			background-position: 0 0;
+			}
+			100% {
+			background-position: 0px 1000px;
+			}
+		}
+
 
 	label {
 		display: block;
@@ -2908,10 +2950,12 @@ a:active {
 
 	}
 
-				#header .logo .symbol img {
+				#header .logo .symbol img { /* THIS IS THE LOGO */
 					display: block;
-					width: 2em;
+					margin: 0.85em 0 0 1.25em;
+					width: 3em;
 					height: 3em;
+					filter: drop-shadow(0 0 1.5px rgb(200, 212, 234));
 				}
 
 		#header nav {
@@ -3239,8 +3283,11 @@ a:active {
 			flex: 1;
 			min-width: 300px;
 			margin: 10px;
+			z-index: 1;
 		}
 		iframe {
+			z-index: 2;
+			border:4px solid rgb(200, 212, 234);
 			aspect-ratio: 16 / 9; /* maintain a 16:9 aspect ratio */
 		}
 
@@ -3251,7 +3298,8 @@ a:active {
 	font-size: 32pt;
 	font-weight: 300;
 	line-height: 1.55;
-	padding: 0em 0 0em 0 ;
+	padding: 0em 0 0em 0;
+	filter: drop-shadow(0 0 0.25px rgb(200, 212, 234));
 	}
 
 /* ABOUT ME */
@@ -3286,7 +3334,17 @@ a:active {
 		color: #a6d9d0;
 		text-decoration: none;
 		letter-spacing: 0.055em;
-		margin: 0 0 0em 0em;
+		margin: 0 0 0em 0.8em;
+		}
+
+	.leftvideo {
+		margin-left: auto;
+		
+		}
+
+	.rightvideo {
+		margin-right: auto;
+		
 		}
 
 	#secondvideo {
