--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -137,22 +137,35 @@ input, select, textarea {
 	font-style: normal;
 }
 
+.montserrat-awesome {
+	font-family: "Montserrat", sans-serif;
+	font-optical-sizing: auto;
+	font-weight: 300;
+	font-style: normal;
+}
+
+
 	.dark-mode {
 		background: rgb(38,47,109);
 		background: radial-gradient(circle, rgba(38,47,109,1) 0%, rgba(2,10,23,1) 50%, rgba(32,56,118,1) 100%); 
 		iframe {
 			border:4px solid rgb(186, 226, 240);
-			filter: drop-shadow(0 0 2.5px rgb(237, 177, 215));
+			filter: drop-shadow(0 0 3px rgb(237, 177, 215));
 		}
 		h1 {
-			font-family: "Oswald";
+			font-family: "Montserrat";
 			color: rgb(160, 212, 179);
-			filter: drop-shadow(0 0 1.5px rgb(237, 177, 215));
+			filter: drop-shadow(0 0 2.5px rgb(237, 177, 215));
 			font-size: 1.75em;
-			font-weight: 400;
+			font-weight: 450;
 			line-height: 1.3;
-			letter-spacing: 0.105em;
+			letter-spacing: 0.065em;
+			text-decoration: none;
 	}
+		h1 a{
+			text-decoration: none;
+		}
+
 		h2 {
 		color: rgb(160, 212, 179);
 		filter: drop-shadow(0 0 1.5px rgb(237, 177, 215));
@@ -190,7 +203,7 @@ a:link {
 
   /* visited link */
 a:visited {
-	color: #68628c;
+	/*color: #68628c; */
 }
 
   /* mouse over link */
@@ -270,11 +283,16 @@ a:active {
 		padding: 0em 0;
 		filter: drop-shadow(0 0 0.5px rgb(200, 212, 234));
 		box-sizing: border-box;
-		
+		text-decoration: none;
+	}
+
+	.noDecoration {
+		text-decoration: none;
 	}
 
 		h1 a {
 			color: inherit;
+			text-decoration: none;
 		}
 
 		@media screen and (max-width: 736px) {
@@ -282,6 +300,7 @@ a:active {
 			h1 {
 				font-size: 2em;
 				margin: 0 0 1em 0;
+				text-decoration: none;
 			}
 
 		}
@@ -289,6 +308,7 @@ a:active {
 		@media screen and (max-width: 360px) {
 
 			h1 {
+				text-decoration: none;
 				font-size: 1.75em;
 			}
 
@@ -2397,6 +2417,7 @@ a:active {
 		appearance: none;
 		display: block;
 		float: left;
+		width: 100%;
 		margin-right: -2em;
 		opacity: 0;
 		width: 1em;
@@ -2513,6 +2534,7 @@ a:active {
 
 		.image.left {
 			float: left;
+			width: 100%
 			padding: 0 1.5em 1em 0;
 			top: 0.25em;
 		}
@@ -3043,6 +3065,19 @@ a:active {
 					transition: transform .7s ease-in-out;
 				}
 
+				.snowbutton { /* THIS IS THE LOGO */
+					display: block;
+					margin: 1.35em 0 0 55em;
+					filter: drop-shadow(0 0 1.5px rgb(200, 212, 234));
+				}
+
+				#header .snowbutton img { /* THIS IS THE LOGO */
+					width: 2em;
+					height: 2em;
+					filter: drop-shadow(0 0 0.25px rgb(200, 212, 234));
+					transition: transform .7s ease-in-out;
+				}
+
 		#header nav {
 			position: fixed;
 			right: 2em;
@@ -3396,12 +3431,18 @@ a:active {
 	font-weight: 300;
 	line-height: 1.75;
 	padding: 0em 0 0em 0 ;
+	width: 60%;
+	text-align: center;
+	align-items: center;
+	display: block;
+	margin: 0 auto;
 	}
 
 	@media screen and (max-width: 736px) {
 
 		#aboutme {
 			padding: 0em 0 8em 0 ;
+			text-align: center;
 		}
 
 	}
