--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3451,6 +3451,14 @@ a:active {
 		margin: -1em 0 0em 0em;
 		box-sizing: border-box;
 		}
+
+	@media screen and (max-width: 736px) {
+
+		.NAVIGATION {
+		display: none;
+		}
+	
+		}
 	
 	.NAVIGATION a{
 		color: #a6d9d0;
