--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -110,6 +110,22 @@ input, select, textarea {
 		scroll-behavior: smooth;
 	}
 	
+	.imageContainer img{
+		display: block;
+		width: 100%;
+		z-index: 1;
+		margin: 0 auto;
+		position: relative;
+	} 
+
+	.GifContainer img{
+		display:inline-block;
+		width: 25%;
+		z-index: 1;
+		margin: 0 auto;
+		position: relative;
+	} 
+	
 
 	body {
 		height: 100%;
@@ -2679,7 +2695,7 @@ a:active {
 	img {
 		transition: transform .7s ease-in-out;
 	}
-	img:hover {
+	#header .logo .symbol img:hover {
 		transform: rotate(360deg);
 	}
 
@@ -3446,6 +3462,20 @@ a:active {
 		}
 
 	}
+
+	#PARAGRAPHSNEW {
+		color: #a6d9d0;
+		font-family: 'Open Sans', Verdana, sans-serif;
+		font-size: 20pt;
+		font-weight: 300;
+		line-height: 1.75;
+		padding: 0em 0 0em 0 ;
+		width: 60%;
+		text-align: center;
+		align-items: center;
+		display: block;
+		margin: 0 auto;
+		}
 
 	.NAVIGATION {
 		margin: -1em 0 0em 0em;
